[aliases]
test = pytest

[wheel]
universal = True

[options]
python_requires = ~= 3.6

[bumpversion]
commit = True
tag = True
current_version = 0.0.0a0.dev0
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<micro>\d+)((?P<pre_release>a|b|rc)(?P<pre_release_num>\d+))?(\.dev(?P<dev_num>\d+))?
serialize =
    {major}.{minor}.{micro}{pre_release}{pre_release_num}.dev{dev_num}
	{major}.{minor}.{micro}{pre_release}{pre_release_num}
	{major}.{minor}.{micro}.dev{dev_num}
	{major}.{minor}.{micro}

[bumpversion:file:setup.py]
search = {current_version}
replace = {new_version}

[bumpversion:file:docs/conf.py]
search = {current_version}
replace = {new_version}

[bumpversion:part:pre_release]
optional_value = b
values =
    a
    b
    rc

[build_sphinx]

[tool:pytest]
testpaths = tests
addopts = --cov=flask_arango_orm --flake8

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:html]

[coverage:xml]