[metadata]
author = Caitlyn O'Hanna
author_email = ravenoak@virtualxistenz.com
classifiers =
	Development Status :: 2 - Pre-Alpha
	Environment :: Plugins
	Environment :: Web Environment
	Framework :: Flask
	Intended Audience :: Developers
	License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python :: 3.6
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Database
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Python Modules
license_file = LICENSE.txt
project_urls =
	Documentation = http://flask-arango-orm.readthedocs.io/
	Source Code = https://github.com/QuaererePlatform/Flask-arango-orm
url = https://github.com/QuaererePlatform/Flask-arango-orm

[bumpversion]
commit = True
tag = True
current_version = 0.1.0
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<micro>\d+)((?P<pre_release>a|b|rc)(?P<pre_release_num>\d+))?(\.dev(?P<dev_num>\d+))?
serialize = 
	{major}.{minor}.{micro}{pre_release}{pre_release_num}.dev{dev_num}
	{major}.{minor}.{micro}{pre_release}{pre_release_num}
	{major}.{minor}.{micro}.dev{dev_num}
	{major}.{minor}.{micro}

[aliases]
test = pytest

[bdist_wheel]
universal = True

[options]
python_requires = ~= 3.6

[bumpversion:file:setup.py]
search = {current_version}
replace = {new_version}

[bumpversion:file:docs/conf.py]
search = {current_version}
replace = {new_version}

[bumpversion:part:pre_release]
optional_value = b
values = 
	a
	b
	rc

[build_sphinx]

[tool:pytest]
testpaths = tests
addopts = --cov=flask_arango_orm --flake8

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:html]

[coverage:xml]

