[metadata]
author = Caitlyn O'Hanna
author_email = ravenoak@virtualxistenz.com
description = Flask connector for ArangoDB using arango-orm
long_description = file: README.rst
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Plugins
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Database
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Python Modules
license = LGPLv3+
license_file = LICENSE.txt
project_urls =
	Documentation = http://flask-arango-orm.readthedocs.io/
	Source Code = https://github.com/QuaererePlatform/Flask-arango-orm
url = https://github.com/QuaererePlatform/Flask-arango-orm

[bumpversion]
current_version = 0.1.1.dev2
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)((?P<pre_release>\.dev|a|b|rc)(?P<pre_release_num>\d+))?
serialize =
    {major}.{minor}.{patch}{pre_release}{pre_release_num}
    {major}.{minor}.{patch}

[aliases]
test = pytest

[options]
python_requires = >= 3.6
packages = find:

[bumpversion:file:VERSION]
search = ^{current_version}$
replace = {new_version}

[bumpversion:part:pre_release]
first_value = .dev
optional_value = b
values =
    .dev
    a
    b
    rc

[tool:pytest]
testpaths = tests
addopts = --cov=flask_arango_orm --flake8

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = True

